<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebdcca"
    tools:context=".Login_Register.RegisterScreen">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Welcome to"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/appNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/gogreen2"
        android:textColor="#2196F3"
        android:textSize="43sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:elevation="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameEditText" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/fullNameEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/full_name"
        android:drawableStart="@drawable/person"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:textColor="@color/black"
        android:textColorHint="#72000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView" />
    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/addressEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/address"
        android:drawableStart="@drawable/ic_home"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:textColor="@color/black"
        android:textColorHint="#72000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGender" />


    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/registerUsernameEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/person"
        android:textColor="@color/black"
        android:textColorHint="#72000000"
        android:background="@drawable/edit_text_bg"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/username2"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerEmailEditText"
        />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/registerEmailEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/email"
        android:background="@drawable/edit_text_bg"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:textColor="@color/black"
        android:textColorHint="#72000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameEditText"
       />



    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/registerPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="8dp"
        android:drawableStart="@drawable/lock"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:textColor="@color/black"
        android:textColorHint="#72000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/gradient_button"
        android:elevation="12dp"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:text="@string/register"
        android:textColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/lock"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:textColor="@color/black"
        android:textColorHint="#72000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText" />

    <TextView
        android:id="@+id/alreadyHasAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/already_have_a_acount_login_now"
        android:textColor="#1976D2"
        android:textSize="14sp"
        android:textColorHint="#72000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
