<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:gravity="center"
    tools:context=".Login_Register.LoginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:elevation="8dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/welcome_to"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="144dp"
                android:elevation="8dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/gogreen"
                android:textColor="@color/colorAccent"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="280dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                android:elevation="8dp"
                android:fontFamily="@font/montserrat_semibold"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="VisualLintTextFieldSize" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:elevation="8dp"
                android:fontFamily="@font/montserrat_semibold"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText"
                tools:ignore="VisualLintTextFieldSize" />


            <carbon.widget.Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="122dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/gradient_button"
                android:elevation="12dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:carbon_cornerRadius="10dp"
                app:carbon_rippleColor="@color/colorAccentLight"
                app:carbon_rippleStyle="background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <carbon.widget.TextView
                android:id="@+id/createAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="8dp"
                android:text="@string/do_not_have_an_account_create_one"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:carbon_cornerRadius="6dp"
                app:carbon_rippleColor="@color/colorAccentLight"
                app:carbon_rippleStyle="background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/forgot_password"
                android:textColor="#1976D2"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
